...
    <string name="action_sold" translatable="false">Mark as Sold</string>
    <string name="action_stock_edit" translatable="false">Edit</string>
    <string name="action_remove" translatable="false">Remove</string>
    <string name="username_hint" translatable="false">Email</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="invalid_email_id" translatable="false">Your Email id</string>
    <string name="invalid_password" translatable="false">Password Required</string>
    <string name="initializing_app" translatable="false">Initializing app…</string>
    <string name="view_stock" translatable="false">View Stock</string>
    <string name="add_stock" translatable="false">Add Stock</string>
    <string name="usedcar" translatable="false">Used Car Valuation</string>
    <string name="add_to_stock" translatable="false">Add to Stock</string>
    <string name="manage_leads" translatable="false">Manage Leads</string>
...
